--- a/index.html
+++ b/index.html
@@ -8,44 +8,80 @@
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="game.js"></script>
     <script src="main.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
 <!-----------------------Modal--------------------------------->
-<div id="modal">
-    <div class="modalcontent">
-        <h1 class="modalH1">Welcome to Connect 4!</h1>
-            <div class="form2">
-            First player name:<br>
-            <input type="text" name="firstname" class="firstPlayer">
-            <br>
-            <input type="radio" name="opponent" value="Human" checked class="input"> Human<br>
-            <br>
-            <input type="radio" name="opponent" value="Dumb-A.I" class="input"> Dumb A.i<br>
-            <br>
-            <input type="radio" name="opponent" value="Smart-A.I" class="input"> Smart A.i
-            <br>
+            <div id="modal">
+                <div class="modalcontent">
+                    <h1 class="modalH1">Welcome to Connect 4!</h1>
+                    <div class="form1Container">
+                        <div class="form2">
+                            First player name:<br>
+                            <input type="text" name="firstname" class="firstPlayer">
+                            <br>
+                            <input type="radio" name="opponent1" value="Human" checked class="input"> Human<br>
+                            <br>
+                            <input type="radio" name="opponent1" value="Dumb-A.I" class="input"> Dumb A.i<br>
+                            <br>
+                            <input type="radio" name="opponent1" value="Smart-A.I" class="input"> Smart A.i
+                            <br>
+                        </div>
+                        <div class="form21">
+                            <br>
+                            <input type="radio" name="chip1" value="Human" checked class="input"> Chip 1
+                            <br>
+                            <br>
+                            <input type="radio" name="chip1" value="Dumb-A.I" class="input"> Chip 2
+                            <br>
+                            <br>
+                            <input type="radio" name="chip1" value="Smart-A.I" class="input"> Chip 3
+                            <br>
+                            <br>
+                            <input type="radio" name="chip1" value="Smart-A.I" class="input"> Chip 4
+                        </div>
+                    </div>
+                    <div class="middle">
+                        <h2 id="connect4Header">Connect 4 Rules</h2>
+                        <p id="rules">To win Connect Four you must be the first player to get four of your colored checkers
+                            in a row either horizontally, vertically or diagonally. </p>
+                        <div class="modal-footer">
+                            <button type="button" id="submit" class="btn btn-primary" data-dismiss="modal">Submit</button>
+                        </div>
+                    </div>
+                <div class="form2container">
+                    <div class="form1">
+                            Second player name:<br>
+                            <input type="text" name="secondname" class="secondPlayer">
+                            <br>
+                            <input type="radio" name="opponent" value="Human" checked class="input"> Human<br>
+                            <br>
+                            <input type="radio" name="opponent" value="Dumb-A.I" class="input"> Dumb A.i<br>
+                            <br>
+                            <input type="radio" name="opponent" value="Smart-A.I" class="input"> Smart A.i
+                            <br>
+                        </div>
+                            <br>
+                        <div class="form11">
+                            <br>
+                            <input type="radio" name="chip" value="Human" checked class="input"> Chip 1
+                            <br>
+                            <br>
+                            <input type="radio" name="chip" value="Dumb-A.I" class="input"> Chip 2
+                            <br>
+                            <br>
+                            <input type="radio" name="chip" value="Smart-A.I" class="input"> Chip 3
+                            <br>
+                            <br>
+                            <input type="radio" name="chip" value="Smart-A.I" class="input"> Chip 4
+                        <br>
+                    </div>
+                </div>
+            </div>
+                <div class="modal-footer">
+            </div>
         </div>
-        <div class="form1">
-            Second player name:<br>
-            <input type="text" name="secondname" class="secondPlayer">
-            <br>
-            <input type="radio" name="opponent" value="Human" checked class="input"> Human<br>
-            <br>
-            <input type="radio" name="opponent" value="Dumb-A.I" class="input"> Dumb A.i<br>
-            <br>
-            <input type="radio" name="opponent" value="Smart-A.I" class="input"> Smart A.i
-            <br>
-        </div>
-        <br>
-        <div class="rulesContainer">
-            <h2 id="connect4Header">Connect 4 Rules</h2>
-            <p>To win Connect Four you must be the first player to get four of your colored checkers
-                in a row either horizontally, vertically or diagonally. </p>
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-    </div>
-</div>
 <!-----------------------End of Modal--------------------------------->
     <div class="gameContainer">
         <div class="header">
