removed background colors

--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
             <h2>Connect Four</h2>
         </div>
         <div class="leftNav">
-            <p>left nav</p>
+            <div class="player1Stats">
+                <h1>Player1:</h1>
+                <p>WINS: </p>
+            </div>
+            <div class="player2Stats">
+                <h1>Player2:</h1>
+                <p>WINS: </p>
+            </div>
+            <div class="resetButtonDiv">
+                <button>RESET GAME</button>
+            </div>
         </div>
         <div class="mainContent">
-            <div class="playerTurn">
-                <p>Player 1's Turn</p>
-            </div>
             <div class="gameBoardContainer">
                 <div class="leftSide">
                     <p></p>
