changed background image

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="game.js"></script>
     <script src="main.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-<!-----------------------Modal--------------------------------->
+
             <div id="modal">
                 <div class="modalcontent">
                     <h1 class="modalH1">Welcome to Connect 4!</h1>
@@ -92,7 +92,7 @@
                 <div class="modal-footer">
             </div>
         </div>
-<!-----------------------End of Modal--------------------------------->
+
     <div class="gameContainer">
         <div class="header">
             <h2>Connect Four</h2>
